# Weather

./: README.md  api_key  config.py  main.py  pyproject.toml  weather types.csv
